# pre-commit-hooks

./: .dictionary.txt  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tool-versions  CHANGELOG.md  README.md  cspell.config.yaml  lychee.toml  pyproject.toml
.github/: renovate.json
.github/workflows/: bump-version.yaml  notify-assignee.yaml  notify-reviewers.yaml  test.yaml
src/: yarn-sdks.sh
