[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  version_files = [".pre-commit-config.yaml:rev:.+Commitizen"]
  major_version_zero = true

  [tool.poetry]
  name = "pre-commit-hooks"
  version = "0.15.8"
  description = "Hooks for Use With the pre-commit Framework"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.11.5"

  [tool.poetry.dev-dependencies]
  commitizen = "==3.6.0" # Keep in sync with .pre-commit-config.yaml.
  pre-commit = "==3.3.3"
