[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  version_files = [".pre-commit-config.yaml:rev:.+Commitizen"]
  major_version_zero = true

  [tool.poetry]
  name = "pre-commit-hooks"
  version = "0.16.2"
  description = "Hooks for Use With the pre-commit Framework"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.12.1"

  [tool.poetry.group.dev.dependencies]
  # Keep in sync with .pre-commit-config.yaml.
  commitizen = "==3.13.0"
  pre-commit = "==3.6.0"
